Implement title and subtitle edition

--- a/projects/sorec-side-menu/src/lib/sorec-side-menu.component.html
+++ b/projects/sorec-side-menu/src/lib/sorec-side-menu.component.html
@@ -6,8 +6,23 @@
       <h6
         class="text-2xl font-bold block antialiased tracking-normal font-sans leading-relaxed text-white"
       >
-        <span [classList]="[titleColor()]">SOREC</span>
-        <span class="font-thin"> Corp</span>
+        <span
+          [ngClass]="[
+            titleColor(),
+            'block',
+            'w-58',
+            'text-ellipsis',
+            'whitespace-nowrap',
+            'overflow-hidden',
+          ]"
+        >
+          {{ title() }}
+        </span>
+        <span
+          class="font-thin block w-58 text-ellipsis whitespace-nowrap overflow-hidden"
+        >
+          {{ subtitle() }}</span
+        >
       </h6>
     </a>
     <button
